# maxar-p3dr-toolbox

./: LICENSE  README.md
maxar_canv/: README.md  pyproject.toml  requirements.txt
maxar_canv/src/maxar_canv/: __init__.py  __main__.py  base.py  canv.py  check.py  ims.py  playback.py  util.py
maxar_p3dr_video/: LICENCE  README.md  pyproject.toml  requirements.txt
maxar_p3dr_video/src/maxar_p3dr_video/: __init__.py  __main__.py  canv_registrator.py  p3dr_message_definition_pb2.py  server.py  socket.py
maxar_tiny_cam/: README.md  pyproject.toml  requirements.txt
maxar_tiny_cam/src/maxar_tiny_cam/: __init__.py  camera.py  lens.py
maxar_tiny_fit/: README.md  pyproject.toml  requirements.txt
maxar_tiny_fit/src/maxar_tiny_fit/: __init__.py  fit.py
maxar_tiny_geo/: README.md  pyproject.toml  requirements.txt
maxar_tiny_geo/src/maxar_tiny_geo/: __init__.py  __main__.py  nav.py  transform.py
maxar_tiny_geo/src/maxar_tiny_geo/resources/: README.md
maxar_tiny_rpc/: README.md  pyproject.toml  requirements.txt
maxar_tiny_rpc/src/maxar_tiny_rpc/: __init__.py  __main__.py  rpc.py
maxar_tiny_rpc/src/maxar_tiny_rpc/reader/: __init__.py  common.py  reader.py  rpb.py  rpc.py  rpc_txt.py
maxar_tiny_rpc/src/maxar_tiny_rpc/reader/tests/: test_reader.py  test_rpb.py
maxar_tiny_rpc/src/maxar_tiny_rpc/reader/tests/data/: missing_key_rpc.txt  parse_error.RPB  test.RPB  test.rpc  test_rpc.txt
